--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 S3method(Ops,gmpoly)
 S3method(print,gmpoly)
 export(gmpoly)
+export(gmpolyEval)
 importFrom(gmp,NA_bigq_)
+importFrom(gmp,apply)
 importFrom(gmp,as.bigq)
 importFrom(gmp,is.bigq)
 importFrom(gmp,outer)
