--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ importFrom(gmp,NA_bigq_)
 importFrom(gmp,apply)
 importFrom(gmp,as.bigq)
 importFrom(gmp,is.bigq)
+importFrom(gmp,is.matrixZQ)
 importFrom(gmp,outer)
 importFrom(purrr,transpose)
