--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,6 @@ Imports: gmp, purrr
 RoxygenNote: 7.1.2
 URL: https://github.com/stla/gmpoly
 BugReports: https://github.com/stla/gmpoly/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
