--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(Ops,gmpoly)
 S3method(print,gmpoly)
 export(gmpoly)
 export(gmpolyEval)
+export(gmpolyGrow)
 importFrom(gmp,NA_bigq_)
 importFrom(gmp,apply)
 importFrom(gmp,as.bigq)
