--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,16 @@
 S3method(Ops,gmpoly)
 S3method(print,gmpoly)
 export(gmpoly)
+export(gmpoly2mvp)
 export(gmpolyConstant)
 export(gmpolyEval)
 export(gmpolyGrow)
 importFrom(gmp,NA_bigq_)
 importFrom(gmp,apply)
 importFrom(gmp,as.bigq)
+importFrom(gmp,asNumeric)
 importFrom(gmp,is.bigq)
 importFrom(gmp,is.matrixZQ)
 importFrom(gmp,outer)
+importFrom(mvp,mvp)
 importFrom(purrr,transpose)
