--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Stéphane Laurent <laurent_step@outlook.fr>
 Description: Symbolic calculation (addition or multiplication) and evaluation of multivariate polynomials with rational coefficients.
 License: GPL-3
 Encoding: UTF-8
-Imports: gmp, purrr, mvp
+Imports: gmp, purrr, mvp, english
 RoxygenNote: 7.1.2
 URL: https://github.com/stla/gmpoly
 BugReports: https://github.com/stla/gmpoly/issues
