--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(gmpoly2mvp)
 export(gmpolyConstant)
 export(gmpolyEval)
 export(gmpolyGrow)
+importFrom(english,english)
 importFrom(gmp,NA_bigq_)
 importFrom(gmp,apply)
 importFrom(gmp,as.bigq)
